--- a/quran/surat/al-baqoroh.mdx
+++ b/quran/surat/al-baqoroh.mdx
@@ -63,127 +63,128 @@ import FontSize from '@site/src/components/FontSize';
 يَكَادُ الْبَرْقُ يَخْطَفُ اَبْصَارَهُمْ ۗ كُلَّمَآ اَضَاۤءَ لَهُمْ مَّشَوْا فِيْهِ ۙ وَاِذَآ اَظْلَمَ عَلَيْهِمْ قَامُوْا ۗوَلَوْ شَاۤءَ اللّٰهُ لَذَهَبَ بِسَمْعِهِمْ وَاَبْصَارِهِمْ ۗ اِنَّ اللّٰهَ عَلٰى كُلِّ شَيْءٍ قَدِيْرٌ ࣖ ۝٢٠
 
 
-يٰٓاَيُّهَا النَّاسُ اعْبُدُوْا رَبَّكُمُ الَّذِيْ خَلَقَكُمْ وَالَّذِيْنَ مِنْ قَبْلِكُمْ لَعَلَّكُمْ تَتَّقُوْنَۙ
+يٰٓاَيُّهَا النَّاسُ اعْبُدُوْا رَبَّكُمُ الَّذِيْ خَلَقَكُمْ وَالَّذِيْنَ مِنْ قَبْلِكُمْ لَعَلَّكُمْ تَتَّقُوْنَۙ ۝٢١
 
 
-الَّذِيْ جَعَلَ لَكُمُ الْاَرْضَ فِرَاشًا وَّالسَّمَاۤءَ بِنَاۤءً ۖوَّاَنْزَلَ مِنَ السَّمَاۤءِ مَاۤءً فَاَخْرَجَ بِهٖ مِنَ الثَّمَرٰتِ رِزْقًا لَّكُمْ ۚ فَلَا تَجْعَلُوْا لِلّٰهِ اَنْدَادًا وَّاَنْتُمْ تَعْلَمُوْنَ
+الَّذِيْ جَعَلَ لَكُمُ الْاَرْضَ فِرَاشًا وَّالسَّمَاۤءَ بِنَاۤءً ۖوَّاَنْزَلَ مِنَ السَّمَاۤءِ مَاۤءً فَاَخْرَجَ بِهٖ مِنَ الثَّمَرٰتِ رِزْقًا لَّكُمْ ۚ فَلَا تَجْعَلُوْا لِلّٰهِ اَنْدَادًا وَّاَنْتُمْ تَعْلَمُوْنَ ۝٢٢
 
 
-وَاِنْ كُنْتُمْ فِيْ رَيْبٍ مِّمَّا نَزَّلْنَا عَلٰى عَبْدِنَا فَأْتُوْا بِسُوْرَةٍ مِّنْ مِّثْلِهٖ ۖ وَادْعُوْا شُهَدَاۤءَكُمْ مِّنْ دُوْنِ اللّٰهِ اِنْ كُنْتُمْ صٰدِقِيْنَ
+وَاِنْ كُنْتُمْ فِيْ رَيْبٍ مِّمَّا نَزَّلْنَا عَلٰى عَبْدِنَا فَأْتُوْا بِسُوْرَةٍ مِّنْ مِّثْلِهٖ ۖ وَادْعُوْا شُهَدَاۤءَكُمْ مِّنْ دُوْنِ اللّٰهِ اِنْ كُنْتُمْ صٰدِقِيْنَ ۝٢٣
 
 
-فَاِنْ لَّمْ تَفْعَلُوْا وَلَنْ تَفْعَلُوْا فَاتَّقُوا النَّارَ الَّتِيْ وَقُوْدُهَا النَّاسُ وَالْحِجَارَةُ ۖ اُعِدَّتْ لِلْكٰفِرِيْنَ
+فَاِنْ لَّمْ تَفْعَلُوْا وَلَنْ تَفْعَلُوْا فَاتَّقُوا النَّارَ الَّتِيْ وَقُوْدُهَا النَّاسُ وَالْحِجَارَةُ ۖ اُعِدَّتْ لِلْكٰفِرِيْنَ ۝٢٤
 
 
-وَبَشِّرِ الَّذِيْنَ اٰمَنُوْا وَعَمِلُوا الصّٰلِحٰتِ اَنَّ لَهُمْ جَنّٰتٍ تَجْرِيْ مِنْ تَحْتِهَا الْاَنْهٰرُ ۗ كُلَّمَا رُزِقُوْا مِنْهَا مِنْ ثَمَرَةٍ رِّزْقًا ۙ قَالُوْا هٰذَا الَّذِيْ رُزِقْنَا مِنْ قَبْلُ وَاُتُوْا بِهٖ مُتَشَابِهًا ۗوَلَهُمْ فِيْهَآ اَزْوَاجٌ مُّطَهَّرَةٌ وَّهُمْ فِيْهَا خٰلِدُوْنَ
+وَبَشِّرِ الَّذِيْنَ اٰمَنُوْا وَعَمِلُوا الصّٰلِحٰتِ اَنَّ لَهُمْ جَنّٰتٍ تَجْرِيْ مِنْ تَحْتِهَا الْاَنْهٰرُ ۗ كُلَّمَا رُزِقُوْا مِنْهَا مِنْ ثَمَرَةٍ رِّزْقًا ۙ قَالُوْا هٰذَا الَّذِيْ رُزِقْنَا مِنْ قَبْلُ وَاُتُوْا بِهٖ مُتَشَابِهًا ۗوَلَهُمْ فِيْهَآ اَزْوَاجٌ مُّطَهَّرَةٌ وَّهُمْ فِيْهَا خٰلِدُوْنَ ۝٢٥
 
 
-۞ اِنَّ اللّٰهَ لَا يَسْتَحْيٖٓ اَنْ يَّضْرِبَ مَثَلًا مَّا بَعُوْضَةً فَمَا فَوْقَهَا ۗ فَاَمَّا الَّذِيْنَ اٰمَنُوْا فَيَعْلَمُوْنَ اَنَّهُ الْحَقُّ مِنْ رَّبِّهِمْ ۚ وَاَمَّا الَّذِيْنَ كَفَرُوْا فَيَقُوْلُوْنَ مَاذَآ اَرَادَ اللّٰهُ بِهٰذَا مَثَلًا ۘ يُضِلُّ بِهٖ كَثِيْرًا وَّيَهْدِيْ بِهٖ كَثِيْرًا ۗ وَمَا يُضِلُّ بِهٖٓ اِلَّا الْفٰسِقِيْنَۙ
+۞ اِنَّ اللّٰهَ لَا يَسْتَحْيٖٓ اَنْ يَّضْرِبَ مَثَلًا مَّا بَعُوْضَةً فَمَا فَوْقَهَا ۗ فَاَمَّا الَّذِيْنَ اٰمَنُوْا فَيَعْلَمُوْنَ اَنَّهُ الْحَقُّ مِنْ رَّبِّهِمْ ۚ وَاَمَّا الَّذِيْنَ كَفَرُوْا فَيَقُوْلُوْنَ مَاذَآ اَرَادَ اللّٰهُ بِهٰذَا مَثَلًا ۘ يُضِلُّ بِهٖ كَثِيْرًا وَّيَهْدِيْ بِهٖ كَثِيْرًا ۗ وَمَا يُضِلُّ بِهٖٓ اِلَّا الْفٰسِقِيْنَۙ۝٢٦ 
 
 
-الَّذِيْنَ يَنْقُضُوْنَ عَهْدَ اللّٰهِ مِنْۢ بَعْدِ مِيْثَاقِهٖۖ وَيَقْطَعُوْنَ مَآ اَمَرَ اللّٰهُ بِهٖٓ اَنْ يُّوْصَلَ وَيُفْسِدُوْنَ فِى الْاَرْضِۗ اُولٰۤىِٕكَ هُمُ الْخٰسِرُوْنَ
+الَّذِيْنَ يَنْقُضُوْنَ عَهْدَ اللّٰهِ مِنْۢ بَعْدِ مِيْثَاقِهٖۖ وَيَقْطَعُوْنَ مَآ اَمَرَ اللّٰهُ بِهٖٓ اَنْ يُّوْصَلَ وَيُفْسِدُوْنَ فِى الْاَرْضِۗ اُولٰۤىِٕكَ هُمُ الْخٰسِرُوْنَ ۝٢٧
 
 
-كَيْفَ تَكْفُرُوْنَ بِاللّٰهِ وَكُنْتُمْ اَمْوَاتًا فَاَحْيَاكُمْۚ ثُمَّ يُمِيْتُكُمْ ثُمَّ يُحْيِيْكُمْ ثُمَّ اِلَيْهِ تُرْجَعُوْنَ
+كَيْفَ تَكْفُرُوْنَ بِاللّٰهِ وَكُنْتُمْ اَمْوَاتًا فَاَحْيَاكُمْۚ ثُمَّ يُمِيْتُكُمْ ثُمَّ يُحْيِيْكُمْ ثُمَّ اِلَيْهِ تُرْجَعُوْنَ ۝٢٨
 
 
-هُوَ الَّذِيْ خَلَقَ لَكُمْ مَّا فِى الْاَرْضِ جَمِيْعًا ثُمَّ اسْتَوٰٓى اِلَى السَّمَاۤءِ فَسَوّٰىهُنَّ سَبْعَ سَمٰوٰتٍ ۗ وَهُوَ بِكُلِّ شَيْءٍ عَلِيْمٌ ࣖ
+هُوَ الَّذِيْ خَلَقَ لَكُمْ مَّا فِى الْاَرْضِ جَمِيْعًا ثُمَّ اسْتَوٰٓى اِلَى السَّمَاۤءِ فَسَوّٰىهُنَّ سَبْعَ سَمٰوٰتٍ ۗ وَهُوَ بِكُلِّ شَيْءٍ عَلِيْمٌ ࣖ ۝٢٩
 
 
-وَاِذْ قَالَ رَبُّكَ لِلْمَلٰۤىِٕكَةِ اِنِّيْ جَاعِلٌ فِى الْاَرْضِ خَلِيْفَةً ۗ قَالُوْٓا اَتَجْعَلُ فِيْهَا مَنْ يُّفْسِدُ فِيْهَا وَيَسْفِكُ الدِّمَاۤءَۚ وَنَحْنُ نُسَبِّحُ بِحَمْدِكَ وَنُقَدِّسُ لَكَ ۗ قَالَ اِنِّيْٓ اَعْلَمُ مَا لَا تَعْلَمُوْنَ
+وَاِذْ قَالَ رَبُّكَ لِلْمَلٰۤىِٕكَةِ اِنِّيْ جَاعِلٌ فِى الْاَرْضِ خَلِيْفَةً ۗ قَالُوْٓا اَتَجْعَلُ فِيْهَا مَنْ يُّفْسِدُ فِيْهَا وَيَسْفِكُ الدِّمَاۤءَۚ وَنَحْنُ نُسَبِّحُ بِحَمْدِكَ وَنُقَدِّسُ لَكَ ۗ قَالَ اِنِّيْٓ اَعْلَمُ مَا لَا تَعْلَمُوْنَ ۝٣٠
 
 
-وَعَلَّمَ اٰدَمَ الْاَسْمَاۤءَ كُلَّهَا ثُمَّ عَرَضَهُمْ عَلَى الْمَلٰۤىِٕكَةِ فَقَالَ اَنْۢبِـُٔوْنِيْ بِاَسْمَاۤءِ هٰٓؤُلَاۤءِ اِنْ كُنْتُمْ صٰدِقِيْنَ
+وَعَلَّمَ اٰدَمَ الْاَسْمَاۤءَ كُلَّهَا ثُمَّ عَرَضَهُمْ عَلَى الْمَلٰۤىِٕكَةِ فَقَالَ اَنْۢبِـُٔوْنِيْ بِاَسْمَاۤءِ هٰٓؤُلَاۤءِ اِنْ كُنْتُمْ صٰدِقِيْنَ ۝٣١
 
 
-قَالُوْا سُبْحٰنَكَ لَا عِلْمَ لَنَآ اِلَّا مَا عَلَّمْتَنَا ۗاِنَّكَ اَنْتَ الْعَلِيْمُ الْحَكِيْمُ
+قَالُوْا سُبْحٰنَكَ لَا عِلْمَ لَنَآ اِلَّا مَا عَلَّمْتَنَا ۗاِنَّكَ اَنْتَ الْعَلِيْمُ الْحَكِيْمُ ۝٣٢
 
 
-قَالَ يٰٓاٰدَمُ اَنْۢبِئْهُمْ بِاَسْمَاۤىِٕهِمْ ۚ فَلَمَّآ اَنْۢبَاَهُمْ بِاَسْمَاۤىِٕهِمْۙ قَالَ اَلَمْ اَقُلْ لَّكُمْ اِنِّيْٓ اَعْلَمُ غَيْبَ السَّمٰوٰتِ وَالْاَرْضِۙ وَاَعْلَمُ مَا تُبْدُوْنَ وَمَا كُنْتُمْ تَكْتُمُوْنَ
+قَالَ يٰٓاٰدَمُ اَنْۢبِئْهُمْ بِاَسْمَاۤىِٕهِمْ ۚ فَلَمَّآ اَنْۢبَاَهُمْ بِاَسْمَاۤىِٕهِمْۙ قَالَ اَلَمْ اَقُلْ لَّكُمْ اِنِّيْٓ اَعْلَمُ غَيْبَ السَّمٰوٰتِ وَالْاَرْضِۙ وَاَعْلَمُ مَا تُبْدُوْنَ وَمَا كُنْتُمْ تَكْتُمُوْنَ ۝٣٣
 
 
-وَاِذْ قُلْنَا لِلْمَلٰۤىِٕكَةِ اسْجُدُوْا لِاٰدَمَ فَسَجَدُوْٓا اِلَّآ اِبْلِيْسَۗ اَبٰى وَاسْتَكْبَرَۖ وَكَانَ مِنَ الْكٰفِرِيْنَ
+وَاِذْ قُلْنَا لِلْمَلٰۤىِٕكَةِ اسْجُدُوْا لِاٰدَمَ فَسَجَدُوْٓا اِلَّآ اِبْلِيْسَۗ اَبٰى وَاسْتَكْبَرَۖ وَكَانَ مِنَ الْكٰفِرِيْنَ ۝٣٤
 
 
-وَقُلْنَا يٰٓاٰدَمُ اسْكُنْ اَنْتَ وَزَوْجُكَ الْجَنَّةَ وَكُلَا مِنْهَا رَغَدًا حَيْثُ شِئْتُمَاۖ وَلَا تَقْرَبَا هٰذِهِ الشَّجَرَةَ فَتَكُوْنَا مِنَ الظّٰلِمِيْنَ
+وَقُلْنَا يٰٓاٰدَمُ اسْكُنْ اَنْتَ وَزَوْجُكَ الْجَنَّةَ وَكُلَا مِنْهَا رَغَدًا حَيْثُ شِئْتُمَاۖ وَلَا تَقْرَبَا هٰذِهِ الشَّجَرَةَ فَتَكُوْنَا مِنَ الظّٰلِمِيْنَ ۝٣٥
 
 
-فَاَزَلَّهُمَا الشَّيْطٰنُ عَنْهَا فَاَخْرَجَهُمَا مِمَّا كَانَا فِيْهِ ۖ وَقُلْنَا اهْبِطُوْا بَعْضُكُمْ لِبَعْضٍ عَدُوٌّ ۚ وَلَكُمْ فِى الْاَرْضِ مُسْتَقَرٌّ وَّمَتَاعٌ اِلٰى حِيْنٍ
+فَاَزَلَّهُمَا الشَّيْطٰنُ عَنْهَا فَاَخْرَجَهُمَا مِمَّا كَانَا فِيْهِ ۖ وَقُلْنَا اهْبِطُوْا بَعْضُكُمْ لِبَعْضٍ عَدُوٌّ ۚ وَلَكُمْ فِى الْاَرْضِ مُسْتَقَرٌّ وَّمَتَاعٌ اِلٰى حِيْنٍ ۝٣٦
 
 
-فَتَلَقّٰٓى اٰدَمُ مِنْ رَّبِّهٖ كَلِمٰتٍ فَتَابَ عَلَيْهِ ۗ اِنَّهٗ هُوَ التَّوَّابُ الرَّحِيْمُ
+فَتَلَقّٰٓى اٰدَمُ مِنْ رَّبِّهٖ كَلِمٰتٍ فَتَابَ عَلَيْهِ ۗ اِنَّهٗ هُوَ التَّوَّابُ الرَّحِيْمُ ۝٣٧
 
 
-قُلْنَا اهْبِطُوْا مِنْهَا جَمِيْعًا ۚ فَاِمَّا يَأْتِيَنَّكُمْ مِّنِّيْ هُدًى فَمَنْ تَبِعَ هُدَايَ فَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ
+قُلْنَا اهْبِطُوْا مِنْهَا جَمِيْعًا ۚ فَاِمَّا يَأْتِيَنَّكُمْ مِّنِّيْ هُدًى فَمَنْ تَبِعَ هُدَايَ فَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ ۝٣٨
 
 
-وَالَّذِيْنَ كَفَرُوْا وَكَذَّبُوْا بِاٰيٰتِنَآ اُولٰۤىِٕكَ اَصْحٰبُ النَّارِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ ࣖ
+وَالَّذِيْنَ كَفَرُوْا وَكَذَّبُوْا بِاٰيٰتِنَآ اُولٰۤىِٕكَ اَصْحٰبُ النَّارِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ ࣖ ۝٣٩
 
 
-يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَوْفُوْا بِعَهْدِيْٓ اُوْفِ بِعَهْدِكُمْۚ وَاِيَّايَ فَارْهَبُوْنِ
+يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَوْفُوْا بِعَهْدِيْٓ اُوْفِ بِعَهْدِكُمْۚ وَاِيَّايَ فَارْهَبُوْنِ ۝٤٠
 
 
-وَاٰمِنُوْا بِمَآ اَنْزَلْتُ مُصَدِّقًا لِّمَا مَعَكُمْ وَلَا تَكُوْنُوْٓا اَوَّلَ كَافِرٍۢ بِهٖ ۖ وَلَا تَشْتَرُوْا بِاٰيٰتِيْ ثَمَنًا قَلِيْلًا ۖوَّاِيَّايَ فَاتَّقُوْنِ
+وَاٰمِنُوْا بِمَآ اَنْزَلْتُ مُصَدِّقًا لِّمَا مَعَكُمْ وَلَا تَكُوْنُوْٓا اَوَّلَ كَافِرٍۢ بِهٖ ۖ وَلَا تَشْتَرُوْا بِاٰيٰتِيْ ثَمَنًا قَلِيْلًا ۖوَّاِيَّايَ فَاتَّقُوْنِ ۝٤١
 
 
-وَلَا تَلْبِسُوا الْحَقَّ بِالْبَاطِلِ وَتَكْتُمُوا الْحَقَّ وَاَنْتُمْ تَعْلَمُوْنَ
+وَلَا تَلْبِسُوا الْحَقَّ بِالْبَاطِلِ وَتَكْتُمُوا الْحَقَّ وَاَنْتُمْ تَعْلَمُوْنَ ۝٤٢
 
 
-وَاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَ وَارْكَعُوْا مَعَ الرّٰكِعِيْنَ
+وَاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَ وَارْكَعُوْا مَعَ الرّٰكِعِيْنَ ۝٤٣
 
 
-۞ اَتَأْمُرُوْنَ النَّاسَ بِالْبِرِّ وَتَنْسَوْنَ اَنْفُسَكُمْ وَاَنْتُمْ تَتْلُوْنَ الْكِتٰبَ ۗ اَفَلَا تَعْقِلُوْنَ
+۞ اَتَأْمُرُوْنَ النَّاسَ بِالْبِرِّ وَتَنْسَوْنَ اَنْفُسَكُمْ وَاَنْتُمْ تَتْلُوْنَ الْكِتٰبَ ۗ اَفَلَا تَعْقِلُوْنَ ۝٤٤
 
 
-وَاسْتَعِيْنُوْا بِالصَّبْرِ وَالصَّلٰوةِ ۗ وَاِنَّهَا لَكَبِيْرَةٌ اِلَّا عَلَى الْخٰشِعِيْنَۙ
+وَاسْتَعِيْنُوْا بِالصَّبْرِ وَالصَّلٰوةِ ۗ وَاِنَّهَا لَكَبِيْرَةٌ اِلَّا عَلَى الْخٰشِعِيْنَۙ ۝٤٥
 
 
-الَّذِيْنَ يَظُنُّوْنَ اَنَّهُمْ مُّلٰقُوْا رَبِّهِمْ وَاَنَّهُمْ اِلَيْهِ رٰجِعُوْنَ ࣖ
+الَّذِيْنَ يَظُنُّوْنَ اَنَّهُمْ مُّلٰقُوْا رَبِّهِمْ وَاَنَّهُمْ اِلَيْهِ رٰجِعُوْنَ ࣖ ۝٤٦
 
 
-يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَنِّيْ فَضَّلْتُكُمْ عَلَى الْعٰلَمِيْنَ
+يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَنِّيْ فَضَّلْتُكُمْ عَلَى الْعٰلَمِيْنَ ۝٤٧
 
 
-وَاتَّقُوْا يَوْمًا لَّا تَجْزِيْ نَفْسٌ عَنْ نَّفْسٍ شَيْـًٔا وَّلَا يُقْبَلُ مِنْهَا شَفَاعَةٌ وَّلَا يُؤْخَذُ مِنْهَا عَدْلٌ وَّلَا هُمْ يُنْصَرُوْنَ
+وَاتَّقُوْا يَوْمًا لَّا تَجْزِيْ نَفْسٌ عَنْ نَّفْسٍ شَيْـًٔا وَّلَا يُقْبَلُ مِنْهَا شَفَاعَةٌ وَّلَا يُؤْخَذُ مِنْهَا عَدْلٌ وَّلَا هُمْ يُنْصَرُوْنَ ۝٤٨
 
 
-وَاِذْ نَجَّيْنٰكُمْ مِّنْ اٰلِ فِرْعَوْنَ يَسُوْمُوْنَكُمْ سُوْۤءَ الْعَذَابِ يُذَبِّحُوْنَ اَبْنَاۤءَكُمْ وَيَسْتَحْيُوْنَ نِسَاۤءَكُمْ ۗ وَفِيْ ذٰلِكُمْ بَلَاۤءٌ مِّنْ رَّبِّكُمْ عَظِيْمٌ
+وَاِذْ نَجَّيْنٰكُمْ مِّنْ اٰلِ فِرْعَوْنَ يَسُوْمُوْنَكُمْ سُوْۤءَ الْعَذَابِ يُذَبِّحُوْنَ اَبْنَاۤءَكُمْ وَيَسْتَحْيُوْنَ نِسَاۤءَكُمْ ۗ وَفِيْ ذٰلِكُمْ بَلَاۤءٌ مِّنْ رَّبِّكُمْ عَظِيْمٌ ۝٤٩
 
 
-وَاِذْ فَرَقْنَا بِكُمُ الْبَحْرَ فَاَنْجَيْنٰكُمْ وَاَغْرَقْنَآ اٰلَ فِرْعَوْنَ وَاَنْتُمْ تَنْظُرُوْنَ
+وَاِذْ فَرَقْنَا بِكُمُ الْبَحْرَ فَاَنْجَيْنٰكُمْ وَاَغْرَقْنَآ اٰلَ فِرْعَوْنَ وَاَنْتُمْ تَنْظُرُوْنَ ۝٥٠
 
 
-وَاِذْ وٰعَدْنَا مُوْسٰىٓ اَرْبَعِيْنَ لَيْلَةً ثُمَّ اتَّخَذْتُمُ الْعِجْلَ مِنْۢ بَعْدِهٖ وَاَنْتُمْ ظٰلِمُوْنَ
+وَاِذْ وٰعَدْنَا مُوْسٰىٓ اَرْبَعِيْنَ لَيْلَةً ثُمَّ اتَّخَذْتُمُ الْعِجْلَ مِنْۢ بَعْدِهٖ وَاَنْتُمْ ظٰلِمُوْنَ ۝٥١
 
 
-ثُمَّ عَفَوْنَا عَنْكُمْ مِّنْۢ بَعْدِ ذٰلِكَ لَعَلَّكُمْ تَشْكُرُوْنَ
+ثُمَّ عَفَوْنَا عَنْكُمْ مِّنْۢ بَعْدِ ذٰلِكَ لَعَلَّكُمْ تَشْكُرُوْنَ ۝٥٢
 
 
-وَاِذْ اٰتَيْنَا مُوْسَى الْكِتٰبَ وَالْفُرْقَانَ لَعَلَّكُمْ تَهْتَدُوْنَ
+وَاِذْ اٰتَيْنَا مُوْسَى الْكِتٰبَ وَالْفُرْقَانَ لَعَلَّكُمْ تَهْتَدُوْنَ ۝٥٣
 
 
-وَاِذْ قَالَ مُوْسٰى لِقَوْمِهٖ يٰقَوْمِ اِنَّكُمْ ظَلَمْتُمْ اَنْفُسَكُمْ بِاتِّخَاذِكُمُ الْعِجْلَ فَتُوْبُوْٓا اِلٰى بَارِىِٕكُمْ فَاقْتُلُوْٓا اَنْفُسَكُمْۗ ذٰلِكُمْ خَيْرٌ لَّكُمْ عِنْدَ بَارِىِٕكُمْۗ فَتَابَ عَلَيْكُمْ ۗ اِنَّهٗ هُوَ التَّوَّابُ الرَّحِيْمُ
+وَاِذْ قَالَ مُوْسٰى لِقَوْمِهٖ يٰقَوْمِ اِنَّكُمْ ظَلَمْتُمْ اَنْفُسَكُمْ بِاتِّخَاذِكُمُ الْعِجْلَ فَتُوْبُوْٓا اِلٰى بَارِىِٕكُمْ فَاقْتُلُوْٓا اَنْفُسَكُمْۗ ذٰلِكُمْ خَيْرٌ لَّكُمْ عِنْدَ بَارِىِٕكُمْۗ فَتَابَ عَلَيْكُمْ ۗ اِنَّهٗ هُوَ التَّوَّابُ الرَّحِيْمُ ۝٥٤
 
 
-وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نُّؤْمِنَ لَكَ حَتّٰى نَرَى اللّٰهَ جَهْرَةً فَاَخَذَتْكُمُ الصّٰعِقَةُ وَاَنْتُمْ تَنْظُرُوْنَ
+وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نُّؤْمِنَ لَكَ حَتّٰى نَرَى اللّٰهَ جَهْرَةً فَاَخَذَتْكُمُ الصّٰعِقَةُ وَاَنْتُمْ تَنْظُرُوْنَ ۝٥٥
 
 
-ثُمَّ بَعَثْنٰكُمْ مِّنْۢ بَعْدِ مَوْتِكُمْ لَعَلَّكُمْ تَشْكُرُوْنَ
+ثُمَّ بَعَثْنٰكُمْ مِّنْۢ بَعْدِ مَوْتِكُمْ لَعَلَّكُمْ تَشْكُرُوْنَ ۝٥٦
 
 
-وَظَلَّلْنَا عَلَيْكُمُ الْغَمَامَ وَاَنْزَلْنَا عَلَيْكُمُ الْمَنَّ وَالسَّلْوٰى ۗ كُلُوْا مِنْ طَيِّبٰتِ مَا رَزَقْنٰكُمْ ۗ وَمَا ظَلَمُوْنَا وَلٰكِنْ كَانُوْٓا اَنْفُسَهُمْ يَظْلِمُوْنَ
+وَظَلَّلْنَا عَلَيْكُمُ الْغَمَامَ وَاَنْزَلْنَا عَلَيْكُمُ الْمَنَّ وَالسَّلْوٰى ۗ كُلُوْا مِنْ طَيِّبٰتِ مَا رَزَقْنٰكُمْ ۗ وَمَا ظَلَمُوْنَا وَلٰكِنْ كَانُوْٓا اَنْفُسَهُمْ يَظْلِمُوْنَ ۝٥٧
 
 
-وَاِذْ قُلْنَا ادْخُلُوْا هٰذِهِ الْقَرْيَةَ فَكُلُوْا مِنْهَا حَيْثُ شِئْتُمْ رَغَدًا وَّادْخُلُوا الْبَابَ سُجَّدًا وَّقُوْلُوْا حِطَّةٌ نَّغْفِرْ لَكُمْ خَطٰيٰكُمْ ۗ وَسَنَزِيْدُ الْمُحْسِنِيْنَ
+وَاِذْ قُلْنَا ادْخُلُوْا هٰذِهِ الْقَرْيَةَ فَكُلُوْا مِنْهَا حَيْثُ شِئْتُمْ رَغَدًا وَّادْخُلُوا الْبَابَ سُجَّدًا وَّقُوْلُوْا حِطَّةٌ نَّغْفِرْ لَكُمْ خَطٰيٰكُمْ ۗ وَسَنَزِيْدُ الْمُحْسِنِيْنَ ۝٥٨
 
 
-فَبَدَّلَ الَّذِيْنَ ظَلَمُوْا قَوْلًا غَيْرَ الَّذِيْ قِيْلَ لَهُمْ فَاَنْزَلْنَا عَلَى الَّذِيْنَ ظَلَمُوْا رِجْزًا مِّنَ السَّمَاۤءِ بِمَا كَانُوْا يَفْسُقُوْنَ ࣖ
+فَبَدَّلَ الَّذِيْنَ ظَلَمُوْا قَوْلًا غَيْرَ الَّذِيْ قِيْلَ لَهُمْ فَاَنْزَلْنَا عَلَى الَّذِيْنَ ظَلَمُوْا رِجْزًا مِّنَ السَّمَاۤءِ بِمَا كَانُوْا يَفْسُقُوْنَ ࣖ ۝٥٩
 
 
 ۞ وَاِذِ اسْتَسْقٰى مُوْسٰى لِقَوْمِهٖ فَقُلْنَا اضْرِبْ بِّعَصَاكَ الْحَجَرَۗ فَانْفَجَرَتْ مِنْهُ اثْنَتَا عَشْرَةَ عَيْنًا ۗ قَدْ عَلِمَ كُلُّ اُنَاسٍ مَّشْرَبَهُمْ ۗ كُلُوْا وَاشْرَبُوْا مِنْ رِّزْقِ اللّٰهِ وَلَا تَعْثَوْا فِى الْاَرْضِ مُفْسِدِيْنَ
 
 
-وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نَّصْبِرَ عَلٰى طَعَامٍ وَّاحِدٍ فَادْعُ لَنَا رَبَّكَ يُخْرِجْ لَنَا مِمَّا تُنْۢبِتُ الْاَرْضُ مِنْۢ بَقْلِهَا وَقِثَّاۤىِٕهَا وَفُوْمِهَا وَعَدَسِهَا وَبَصَلِهَا ۗ قَالَ اَتَسْتَبْدِلُوْنَ الَّذِيْ هُوَ اَدْنٰى بِالَّذِيْ هُوَ خَيْرٌ ۗ اِهْبِطُوْا مِصْرًا فَاِنَّ لَكُمْ مَّا سَاَلْتُمْ ۗ وَضُرِبَتْ عَلَيْهِمُ الذِّلَّةُ وَالْمَسْكَنَةُ وَبَاۤءُوْ بِغَضَبٍ مِّنَ اللّٰهِ ۗ ذٰلِكَ بِاَنَّهُمْ كَانُوْا يَكْفُرُوْنَ بِاٰيٰتِ اللّٰهِ وَيَقْتُلُوْنَ النَّبِيّٖنَ بِغَيْرِ الْحَقِّ ۗ ذٰلِكَ بِمَا عَصَوْا وَّكَانُوْا يَعْتَدُوْنَ ࣖ
+
+وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نَّصْبِرَ عَلٰى طَعَامٍ وَّاحِدٍ فَادْعُ لَنَا رَبَّكَ يُخْرِجْ لَنَا مِمَّا تُنْۢبِتُ الْاَرْضُ مِنْۢ بَقْلِهَا وَقِثَّاۤىِٕهَا وَفُوْمِهَا وَعَدَسِهَا وَبَصَلِهَا ۗ قَالَ اَتَسْتَبْدِلُوْنَ الَّذِيْ هُوَ اَدْنٰى بِالَّذِيْ هُوَ خَيْرٌ ۗ اِهْبِطُوْا مِصْرًا فَاِنَّ لَكُمْ مَّا سَاَلْتُمْ ۗ وَضُرِبَتْ عَلَيْهِمُ الذِّلَّةُ وَالْمَسْكَنَةُ وَبَاۤءُوْ بِغَضَبٍ مِّنَ اللّٰهِ ۗ ذٰلِكَ بِاَنَّهُمْ كَانُوْا يَكْفُرُوْنَ بِاٰيٰتِ اللّٰهِ وَيَقْتُلُوْنَ النَّبِيّٖنَ بِغَيْرِ الْحَقِّ ۗ ذٰلِكَ بِمَا عَصَوْا وَّكَانُوْا يَعْتَدُوْنَ ࣖ 
 
 
 اِنَّ الَّذِيْنَ اٰمَنُوْا وَالَّذِيْنَ هَادُوْا وَالنَّصٰرٰى وَالصَّابِــِٕيْنَ مَنْ اٰمَنَ بِاللّٰهِ وَالْيَوْمِ الْاٰخِرِ وَعَمِلَ صَالِحًا فَلَهُمْ اَجْرُهُمْ عِنْدَ رَبِّهِمْۚ وَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ
